--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@ Error message and password prompt
 
 <li>$:/state/tab--1190666861</li>
 
+<li>$:/state/tab--152518593</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -266,6 +268,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/moresidebar-1645249547</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
@@ -496,6 +500,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
 <li>$:/view</li>
+
+<li>2020-06 / 18 / 17:57:38 /</li>
 
 <li>From collector to creator</li>
 
@@ -12287,6 +12293,9 @@ exports.context = contextWidget;
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
+<div created="20200618095532887" creator="debby" modified="20200618095536451" modifier="debby" title="$:/state/tab--152518593">
+<pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
+</div>
 <div created="20200618012853212" creator="debby" modified="20200618093456470" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
@@ -12305,13 +12314,16 @@ exports.context = contextWidget;
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20200618095525979" creator="debby" modified="20200618095537575" modifier="debby" title="$:/state/tab/moresidebar-1645249547">
+<pre>$:/core/ui/MoreSideBar/All</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="$:/core/ui/SideBar/Recent [[TiddlyBlink home]] TiddlyBlink" modified="20200618095355245" modifier="debby" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="[[2020-06 / 18 / 17:57:38 /]]" modified="20200618095819054" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12384,7 +12396,7 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200618094903907" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200618095750969" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco RiviÃ¨re" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -13340,8 +13352,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618095404926" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink</pre>
+<div created="20200618014049220" creator="debby" modified="20200618095502747" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13457,6 +13469,17 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200127165334843" creator="debby" modified="20200618093450051" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
+</div>
+<div created="20200618095738085" creator="debby" modified="20200618100159023" modifier="debby" tags="Journal" title="2020-06 / 18 / 17:57:38 /">
+<pre>! Start again
+
+My fascination with note-taking tools went overboard. I can't believe I'm trying out this geeky option--Tiddlywiki with TiddlyBlink. 
+
+Saving with GitHub is iffy, and sometimes this site/page renders strangely. Most of the time it works. I wonder what would come out of constantly updating this space. 
+
+Since what I'm writing here is technically public, I need to write in general terms instead of referring to specific examples. This will be challenging.
+
+In order to follow the principle of never creating notes in isolation, here's a link to [[From collector to creator]]. í ½í¸Š</pre>
 </div>
 <div created="20200618094249392" creator="debby" modified="20200618095052710" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
 <pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    
