--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ Error message and password prompt
 
 <li>$:/view</li>
 
-<li>2020-06 / 18 / 17:57:38 /</li>
+<li>2020-06-18</li>
 
 <li>From collector to creator</li>
 
@@ -12323,7 +12323,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="[[2020-06 / 18 / 17:57:38 /]]" modified="20200618095819054" modifier="debby" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="2020-06-18" modified="20200618100209348" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13352,7 +13352,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618095502747" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200618100245437" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>From collector to creator</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -13470,7 +13470,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200127165334843" creator="debby" modified="20200618093450051" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
 </div>
-<div created="20200618095738085" creator="debby" modified="20200618100159023" modifier="debby" tags="Journal" title="2020-06 / 18 / 17:57:38 /">
+<div created="20200618095738085" creator="debby" modified="20200618100308404" modifier="debby" tags="Journal" title="2020-06-18">
 <pre>! Start again
 
 My fascination with note-taking tools went overboard. I can't believe I'm trying out this geeky option--Tiddlywiki with TiddlyBlink. 
