--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/themes/jd/Mono</li>
 
+<li>$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/.giffmex/ViewToolbar/viewrefscheckboxes</li>
@@ -275,6 +277,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154</li>
 
+<li>$:/state/plugin-info--270617185-$:/themes/jd/Mono</li>
+
 <li>$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/state/plugin-info--270617185-$:/themes/tiddlywiki/vanilla</li>
@@ -285,15 +289,11 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown---1750897968</li>
 
-<li>$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930</li>
-
 <li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown</li>
 
 <li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown--436478829</li>
 
 <li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
 
 <li>$:/state/tab--1190666861</li>
 
@@ -1084,7 +1084,10 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200619015634167" creator="debby" modified="20200619015707951" modifier="debby" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown">
 <pre>no</pre>
 </div>
-<div created="20200728020017165" creator="debby" modified="20200728020019268" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/jd/Mono">
+<div created="20200728015919374" creator="debby" modified="20200728020300095" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/jd/Mono">
+<pre>no</pre>
+</div>
+<div created="20200728015926979" creator="debby" modified="20200728020308572" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
 <pre>no</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
@@ -10515,8 +10518,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20190202142805411" creator="jd" modified="20200728020228577" modifier="debby" title="$:/palette">
-<pre>$:/palettes/TiddlyBlink</pre>
+<div created="20190202142805411" creator="jd" modified="20200728015544443" modifier="debby" title="$:/palette">
+<pre>$:/palettes/SolarFlare</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -11811,8 +11814,8 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200722080339252" creator="debby" modified="20200722080339252" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
-<pre>enable</pre>
+<div created="20200722080339252" creator="debby" modified="20200728015720544" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
+<pre>disable</pre>
 </div>
 <div created="20200722080340752" creator="debby" modified="20200722080340752" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/highlight">
 <pre>enable</pre>
@@ -12345,8 +12348,11 @@ exports.context = contextWidget;
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
 <pre>LeDoux,McCloud,McDonald,TiddlyWiki,TiddlyWiki5,CamelCase,DuBay,McGraw,McCullough,LeGrange,NaCl,MeOH,EtOH,PiB,TiddlyTools,ResetFind,WikiText,WinBuilder,WinPE,ProgramData,TiddlyFox,GuillermoMartin,AndrewFraser,RochesterMNwalkers,DEdwardsCalgary,WalkaboutMM,HarveyG,McCoy,GeForce,SideBar,AirBnB,PayPal,LeBron,JavaScript,ExpressJet,CutePDF,McClouds,McElroy,McGovern,TableHelper,ShadowTiddler,WikiWords</pre>
 </div>
-<div created="20200527084422330" creator="debby" modified="20200728020146280" modifier="debby" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
-<pre>readme</pre>
+<div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
+<pre>config</pre>
+</div>
+<div created="20200728015904036" creator="debby" modified="20200728015904036" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/jd/Mono">
+<pre>yes</pre>
 </div>
 <div created="20200722092008809" creator="debby" modified="20200722092028508" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite">
 <pre>no</pre>
@@ -12363,9 +12369,6 @@ exports.context = contextWidget;
 <div created="20200722091858275" creator="debby" modified="20200722091941250" modifier="debby" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/markdown---1750897968">
 <pre>readme</pre>
 </div>
-<div created="20200728020129940" creator="debby" modified="20200728020132171" modifier="debby" title="$:/state/plugin-info-749868030-$:/plugins/rmnvsl/krystal---432838930">
-<pre>contents</pre>
-</div>
 <div created="20200619015624004" creator="debby" modified="20200619015631603" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown">
 <pre>yes</pre>
 </div>
@@ -12375,29 +12378,26 @@ exports.context = contextWidget;
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
-<div created="20200728020203492" creator="debby" modified="20200728020204439" modifier="debby" title="$:/state/sidebar">
-<pre>no</pre>
-</div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728020226505" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200618012853212" creator="debby" modified="20200728015859443" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200722135107633" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200618015239429" creator="debby" modified="20200728020118840" modifier="debby" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
+<div created="20200618015239429" creator="debby" modified="20200728020302176" modifier="debby" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
 <div created="20200527074400500" creator="debby" modified="20200722135101714" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728020200353" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200527074318200" creator="debby" modified="20200728015901195" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -12414,7 +12414,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728020223269" creator="debby" list="$:/ControlPanel Welcome!" modified="20200728020223269" modifier="debby" title="$:/StoryList">
+<div list="Welcome!" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13449,14 +13449,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728015154339" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200728015836689" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Doves - Carousels</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
 </div>
-<div created="20190202142800922" creator="jd" modified="20200728020215469" modifier="debby" title="$:/theme">
-<pre>$:/themes/tiddlywiki/snowwhite</pre>
+<div created="20190202142800922" creator="jd" modified="20200728015847995" modifier="debby" title="$:/theme">
+<pre>$:/themes/jd/Mono</pre>
 </div>
 <div author="JD" core-version="&gt;=5.1.19" created="20190202102252527" creator="jd" dependents="$:/themes/tiddlywiki/vanilla" description="For writing long texts" list="contents" modified="20190203163019606" modifier="jd" name="Mono" plugin-type="theme" source="http://j.d.mono.tiddlyspot.com" title="$:/themes/jd/Mono" type="application/json" version="1.0.32">
 <pre>{
